--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ title                    : "Ching-Yen Tseng"
 title_separator          : "-"
 name                     : &name "Ching-Yen Tseng"
 description              : &description "personal description"
-url                      : "https://chingyen06.github.io" # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
-baseurl                  : "/acad" # the subpath of your site, e.g. "/blog"
+url                      : "https://acad.tseng-school.com" # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+baseurl                  :  # the subpath of your site, e.g. "/blog"
 repository               : "chingyen06/chingyen06.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
